--- a/app/src/main/res/layout/notconnected.xml
+++ b/app/src/main/res/layout/notconnected.xml
@@ -52,7 +52,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Woops !   Could Not Connect To Internet"
+            android:text="Woops !   Can Not Connect To The Internet"
             android:layout_alignParentBottom="true"
             android:layout_centerInParent="true"
             android:gravity="center_horizontal"
