--- a/app/src/main/res/layout/all_books.xml
+++ b/app/src/main/res/layout/all_books.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:background="@color/recyclerviewbg"
     android:id="@+id/swiperefreshlayout"
     android:fitsSystemWindows="true">
@@ -11,9 +11,10 @@
 
 
         <android.support.v7.widget.RecyclerView
+            android:layout_margin="7dp"
             android:id="@+id/recycler_view1"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:scrollbars="vertical"
             />
 
