--- a/app/src/main/res/layout/books_layout.xml
+++ b/app/src/main/res/layout/books_layout.xml
@@ -16,7 +16,7 @@
 
 
     <RelativeLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
 
@@ -27,7 +27,7 @@
 
 
     <LinearLayout
-        android:layout_marginTop="12dp"
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -37,15 +37,15 @@
 
         <LinearLayout
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="0.5"
             android:id="@+id/right"
             android:orientation="vertical"
             android:gravity="center">
 
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:src="@drawable/ic_play_arrow_black_24dp"
                 android:id="@+id/mbl_bookimage"
                 android:adjustViewBounds="true"
@@ -59,6 +59,7 @@
 
 
         <LinearLayout
+            android:layout_marginTop="2dp"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2.5"
