--- a/app/src/main/res/layout/books_on_click_dialog.xml
+++ b/app/src/main/res/layout/books_on_click_dialog.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="18dp"
+    android:padding="12dp"
     android:gravity="center_horizontal"
     android:background="#ffffff">
 
@@ -10,16 +11,15 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:gravity="center_horizontal"
         android:layout_gravity="center_horizontal"
-
         >
 
 
         <ImageView
-            android:layout_width="180dp"
-            android:layout_height="180dp"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
             android:src="@drawable/logo"
             android:layout_gravity="center_horizontal"
             android:id="@+id/dialog_image"
