--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -4,10 +4,10 @@
 
     To get one, follow this link, follow the directions and press "Create" at the end:
 
-    https://console.developers.google.com/flows/enableapi?apiid=maps_android_backend&keyType=CLIENT_SIDE_ANDROID&r=BC:00:42:B3:83:8E:06:D0:79:DA:55:65:00:58:52:24:72:70:EE:04%3Bcom.crap.booked.NearbyBooks
+    https://console.developers.google.com/flows/enableapi?apiid=maps_android_backend&keyType=CLIENT_SIDE_ANDROID&r=C8:4C:60:70:CE:EF:D8:2E:F2:E4:B8:7B:4A:9A:C4:60:1E:15:08:38%3Bcom.street35.booked.NearbyBooks
 
     You can also add your credentials to an existing key, using this line:
-    BC:00:42:B3:83:8E:06:D0:79:DA:55:65:00:58:52:24:72:70:EE:04;com.street35.booked.NearbyBooks
+    C8:4C:60:70:CE:EF:D8:2E:F2:E4:B8:7B:4A:9A:C4:60:1E:15:08:38;com.street35.booked.NearbyBooks
 
     Alternatively, follow the directions here:
     https://developers.google.com/maps/documentation/android/start#get-key
@@ -16,6 +16,6 @@
     string in this file.
     -->
     <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
-        AIzaSyC8H6bapIxEEg5Pjy2eia8ouypN8IHabGw
+        AIzaSyDUiFu07GuyrtWiXjGSf4Tl6fQFMegxWdo
     </string>
 </resources>
