--- a/app/src/main/res/layout/my_books.xml
+++ b/app/src/main/res/layout/my_books.xml
@@ -1,16 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.SwipeRefreshLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:id="@+id/swipelayout"
-    android:layout_height="wrap_content"
-    android:background="@color/recyclerviewbg">
+    android:layout_height="match_parent"
+    android:background="@color/recyclerviewbg"
+    android:padding="7dp"
+    >
 
 
         <android.support.v7.widget.RecyclerView
+
             android:id="@+id/recycler_view1"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:scrollbars="vertical"
             />
 
